<resources>
    <string name="app_name">SnailPass</string>

    <string name="repeat_password">Repeat Password</string>
    <string name="hint">Hint</string>
    <string name="todo">TODO</string>
    <!-- login -->
    <string name="email">Email</string>
    <string name="Sign_in_to_continue">Sign in to SnailPass</string>
    <string name="password">Password</string>
    <string name="login_button">Sign in to continue</string>
    <string name="registration_button">NEW USER? Sign Up</string>

    <!-- Registration -->
    <string name="Sign_up_to_continue">Sign Up to continue</string>
    <string name="registration_screen_button">Sign Up</string>
    <string name="have_account">Already have an account? Sign In!</string>


    <string name="logo_description">Logo</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_button">Add Element</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="EmptyList">Store your passwords for any services</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="Accounts">Accounts</string>
    <string name="Notes">Notes</string>
    <string name="accounts">Accounts</string>

    <string name="hello_blank_fragment">Will be added in the next update :)</string>
    <string name="showpassword">showPassword</string>
    <string name="generatoropen">generatorOpen</string>
    <string name="passwordLength">password length</string>
    <string name="a_z_small">a-z</string>
    <string name="a_z_capital">A-Z</string>
    <string name="numbers">0–9</string>
    <string name="Symbols">Symbols</string>
    <string name="generatePassword">generate Password</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="EditNote">Edit note</string>
    <string name="NotesToolBarText">Notes</string>
    <string name="AccountsToolBarText">Accounts</string>
    <string name="empty_error">the field can not be empty</string>
    <string name="user_already_exists">user already exists!</string>
    <string name="login_error">Authentication Error. Incorrect credentials</string>
    <string name="invalid_username">Invalid email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="service_name">Service</string>
    <string name="login_name">Login</string>
    <string name="password_name">Password</string>
    <string name="Logout">Logout</string>

    <string name="update_title">new update is come!</string>
    <string name="update_message">You want to download it?</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">SnailPass</string>
    <string name="menu_home">Home</string>
    <string name="menu_acounts">Accounts</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_logout">Logout</string>
    <string name="email_too_short">too short</string>
    <string name="password_too_short">too short</string>

</resources>