<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pwgil">


    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"

        android:inputType="textPassword"

        android:hint="@string/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/generatorOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/baseline_keyboard_arrow_down_24"
        android:contentDescription="@string/generatoropen"/>

    <ImageButton
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/generatorOpen"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/baseline_remove_red_eye_24"
        android:contentDescription="@string/showpassword" />

    <LinearLayout
        android:id="@+id/generation_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/password_genenration"

        android:backgroundTintMode="add"

        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPasswordLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView" />

            <EditText
                android:id="@+id/editTextPasswordLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/passwordLength"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxa_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/a_z_small" />

            <CheckBox
                android:id="@+id/checkBoxA_Z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/a_z_capital" />

            <CheckBox
                android:id="@+id/checkBoxNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/numbers" />

            <CheckBox
                android:id="@+id/checkSpecificSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/specificSymbols" />


        </LinearLayout>

        <Button
            android:id="@+id/generate_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generatePassword" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>