<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".presentation.registration.RegistrationActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView2"

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        app:srcCompat="@drawable/snailpassnewlogo"
        android:transitionName="snail_Logo" />
    <TextView
        android:id="@+id/welcomeText2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-16dp"
        android:textColor="@color/light_gray_text"
        android:text="@string/Sign_up_to_continue"
        android:transitionName="snail_text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/light_gray_text"
        android:hint="@string/email"
        android:transitionName="snail_Username"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray_text"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:transitionName="snail_Password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray_text"
        android:hint="@string/repeat_password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_password_text"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray_text"
        android:hint="@string/hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hint_text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!--EditText

        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />

    <EditText

        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />

    <EditText

        android:id="@+id/repeat_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/repeat_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" /-->

    <Button
        android:id="@+id/r_registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="snail_Login_Button"

        android:text="@string/registration_screen_button" />

    <Button
        android:id="@+id/r_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:transitionName="snail_SignUp_Button"

        android:text="@string/have_account" />


    <ProgressBar
        android:layout_margin="16dp"
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>