<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    android:padding="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView

                android:id="@+id/textView1"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pwgil"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ems="10"

                        android:hint="@string/value"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--EditText
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"

                    android:hint="@string/value"

                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" /-->

                <ImageButton
                    android:id="@+id/generatorOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"

                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/generatoropen"
                    app:layout_constraintEnd_toEndOf="@+id/username_text_input_layout"
                    app:layout_constraintTop_toTopOf="@+id/username_text_input_layout"
                    app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />

                <ImageButton
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"

                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/showpassword"
                    app:layout_constraintEnd_toStartOf="@+id/generatorOpen"
                    app:layout_constraintTop_toTopOf="@+id/username_text_input_layout"
                    app:srcCompat="@drawable/baseline_remove_red_eye_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--com.example.snailpasswordmanager.SnailTextInputLayout
                    android:id="@+id/username_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    app:boxBackgroundColor="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordGeneratorToggleEnabled="true"
                    >

                    <EditText
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:hint="@string/value"
                        android:inputType="textPassword" />

                </com.example.snailpasswordmanager.SnailTextInputLayout-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/generation_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/password_genenration"

            android:backgroundTintMode="add"

            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textPasswordLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/passwordLength" />

                <EditText
                    android:id="@+id/editTextPasswordLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/passwordLength"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxa_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/a_z_small" />

                <CheckBox
                    android:id="@+id/checkBoxA_Z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/a_z_capital" />

                <CheckBox
                    android:id="@+id/checkBoxNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/numbers" />

                <CheckBox
                    android:id="@+id/checkSpecificSymbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/specificSymbols" />


            </LinearLayout>

            <Button
                android:id="@+id/generate_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generatePassword" />
        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>



<!--com.google.android.material.textfield.TextInputLayout
android:id="@+id/username_text_input_layout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_margin="2dp"
android:layout_weight="2"
app:boxBackgroundColor="@color/white"
app:passwordToggleEnabled="true">

<EditText
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:ems="10"
    android:hint="@string/value"
    android:inputType="textPassword" /-->